--- a/impls/rust-dmr/Cargo.toml
+++ b/impls/rust-dmr/Cargo.toml
@@ -7,7 +7,8 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-
+linefeed = "0.6.0"
+dirs = "2.0.2"
 
 [[bin]]
 name = "step0_repl"
