--- a/impls/rust-dmr/Cargo.toml
+++ b/impls/rust-dmr/Cargo.toml
@@ -9,6 +9,9 @@ edition = "2018"
 [dependencies]
 linefeed = "0.6.0"
 dirs = "2.0.2"
+regex = "1.3.7"
+lazy_static = "1.4.0"
+itertools = "0.9.0"
 
 [[bin]]
 name = "step0_repl"
