--- a/impls/rust-dmr/Makefile
+++ b/impls/rust-dmr/Makefile
@@ -1,2 +1,8 @@
-target/debug/%: src Cargo.toml Cargo.lock
+SOURCES = $(wildcard src/*) $(wildcard src/bin/*) Cargo.toml Cargo.lock
+
+target/debug/%: $(SOURCES)
 	cargo build --bin $(*F)
+
+target/release/%: $(SOURCES)
+	cargo build --release --bin $(*F)
+
