--- a/impls/rust-dmr/Cargo.toml
+++ b/impls/rust-dmr/Cargo.toml
@@ -14,3 +14,5 @@ lazy_static = "1.4.0"
 itertools = "0.9.0"
 log = { version= "0.4.8", features=["std", "release_max_level_off"] }
 pretty_env_logger = "0.4"
+ansi_term = "0.12.1"
+atty = "0.2.14"
