Properly process escapes (\n, \\, \") in strings
Before, reader::build_string was using the contents of the string literal directly as the string payload.
I get the feeling that this would be made better by passing around better types. E.g. pass the StringLiteral
around directly rather than an &str. Types are your friend!

--- a/impls/rust-dmr/Makefile
+++ b/impls/rust-dmr/Makefile
@@ -4,5 +4,5 @@ target/debug/%: $(SOURCES)
 	cargo build --bin $(*F)
 
 target/release/%: $(SOURCES)
-	cargo build --release --bin $(*F)
+	cargo build --quiet --release --bin $(*F)
 
