--- a/impls/rust-dmr/Cargo.toml
+++ b/impls/rust-dmr/Cargo.toml
@@ -16,3 +16,4 @@ log = { version= "0.4.8", features=["std", "release_max_level_off"] }
 pretty_env_logger = "0.4"
 ansi_term = "0.12.1"
 atty = "0.2.14"
+bimap = "0.4.0"
