--- a/impls/rust-dmr/Cargo.toml
+++ b/impls/rust-dmr/Cargo.toml
@@ -12,7 +12,7 @@ dirs = "2.0.2"
 regex = "1.3.7"
 lazy_static = "1.4.0"
 itertools = "0.9.0"
-log = { version= "0.4.8", features=["std", "release_max_level_off"] }
+log = { version= "0.4.8", features=["std"] }
 pretty_env_logger = "0.4"
 ansi_term = "0.12.1"
 atty = "0.2.14"
